--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -6,11 +6,13 @@
     </head>
     <body>
         {% for restaurant in restaurants %}
-            <a href="#">
-                <ul>
-                    <li></li>
-                </ul>
-            </a>
+            <ul>
+                <a href="{% url 'restaurant-detail' restaurant.id %}">
+                    <li>{{ restaurant.name }}</li>
+                </a>
+                    <li> {{ restaurant.description}}</li>
+                <br>
+            </ul>
         {% endfor %}
     </body>
 </html>
