Updated Completed task 5

--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -5,7 +5,7 @@
         <title>Detail</title>
     </head>
     <body>
-    	<a href="{% url 'restaurant-list'}">View List</a>
+    	<a href="{% url 'restaurant-list' %}">View List</a>
     	<ul>
     		<li>
     			{{ restaurant.name }}
